Add basic support for cross compilation